Added custom Login/Register pages for keycloak